--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "axios": "^0.21.0",
     "moment": "^2.29.1",
-    "netlify-lambda": "^1.0.2"
+    "netlify-lambda": "^1.0.2",
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {},
   "scripts": {
