--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.21.0",
     "moment": "^2.29.1",
     "netlify-lambda": "^1.0.2",
+    "request": "^2.88.2",
     "request-promise": "^4.2.6"
   },
   "devDependencies": {},
